SPRING WEB SERVICES CHANGELOG
=============================
http://www.springframework.org

Changes in version 1.0-M1
-------------------------

Package org.springframework.oxm
* added support for JAXB 2: refactored JaxbMarshaller into AbstractJaxbMarshaller, Jaxb1Marshaller and Jaxb2Marshaller

Package org.springframework.xml
* added XPath abstraction with support for JAXP 1.3, Jaxen, and Xalan

Changes in version 0.9.1 (06.04.2006)
-------------------------------------

Overall
* made overall thread safety fixes
* added initial reference documentation in HTML and PDF form
* (lots of minor bugfixes)

Package org.springframework.oxm
* AbstractMarshallers does proper SAXSource handling
* exposing JAXB properties on JaxbMarshaller
* added XmlOptionsFactoryBean for use with XmlBeansMarshaller
* moved JaxbContextFactoryBean functionality into JaxbMarshaller
* moved JibxBindingFactoryBean functionality into JibxMarshaller

Package org.springframework.ws.soap
* made AbstractSoapEndpointMapping ignorant of SOAP version
* added initial attachment support

Package org.springframework.xml
* added a JaxpVersion class for easy detection of JAXP version
* removed JAXP1.3 dependency




Changes in version 0.9 (11.02.2006)
-----------------------------------
* First public preview release.