@@ -5,10 +5,20 @@ http://www.springframework.org
 Changes in version 1.0-M1
 -------------------------
 
-Package org.springframework.oxm
+Package org.springframework.ws.endpoint
+* added AbstractDom4JPayloadEndpoint
+* added AbstractXomPayloadEndpoint
+
+Package org.springframework.ws.soap
+* added SoapFaultDetail and SoapFaultDetailElement
+
+Package org.springframework.ws.soap.endpoint
+* added SimpleSoapExceptionResolver
+
+Package org.springframework.oxm.jaxb
 * added support for JAXB 2: refactored JaxbMarshaller into AbstractJaxbMarshaller, Jaxb1Marshaller and Jaxb2Marshaller
 
-Package org.springframework.xml
+Package org.springframework.xml.xpath
 * added XPath abstraction with support for JAXP 1.3, Jaxen, and Xalan
 
 Changes in version 0.9.1 (06.04.2006)
